# blockchain-tools

./: .gitignore  README.md  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/tests/: address_validation.rs
src/app/: layout.tsx  page.tsx
src/components/: BitcoinAddressValidator.tsx
